# discero-gen

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
discero/: __init__.py  cli.py  config.py  graph.py  output.py  progress.py  schemas.py  state.py
discero/agents/: __init__.py  chapter.py  flashcards.py  outline.py  quiz.py  seminar.py
discero/llm/: __init__.py  anthropic_client.py  base.py  gemini_client.py  openai_client.py
discero/prompts/: chapter.py  flashcards.py  outline.py  quiz.py  seminar.py  subject_configs.py
discero/tools/: __init__.py  arxiv.py  tavily.py  wikipedia.py
examples/: calc2.json  history_course.json  philosophy_of_mind.json
